--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,73 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
+
+h1{
+    font-size: 3.125rem;
+    line-height: 4rem;
+    color: #222;
+}
+
+h2{
+    font-size: 2.875rem;
+    line-height: 3.375rem;
+    color: #222;
+}
+
+h4{
+    font-size: 1.5rem;
+    color: #222;
+}
+
+h6{
+    font-weight: 600;
+    font-size: 12px;
+}
+
+p{
+    font-size: 16px;
+    color: #465b56;
+    margin: 15px 0 20px 0;
+}
+
+a{
+    text-decoration: none;
+}
+
+.section-p1{
+    padding: 40px 80px;
+}
+
+.section-m1{
+    margin: 40px 0;
+}
+
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: all 0.3 ease;
+}
+
+button.white{
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid white;
+    outline: none;
+    transition: all 0.3s ease;
+}
