--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,63 @@ button.white{
     font-weight: 700;
 
 }
+
+
+/*******---Feature Section Style---*******/
+
+#feature{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#feature .fe-box{
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.06);
+    border: 1px solid #cce7d0;
+    border-radius: 4px;
+    margin: 25px 10px;
+    cursor: pointer;
+    transition: all 0.3s linear;
+}
+
+#feature .fe-box:hover{
+    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+}
+
+#feature .fe-box img{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#feature .fe-box h6{
+    padding: 9px 8px 6px;
+    margin: 0 10px;
+    background-color: #fddde4;
+    border-radius: 4px;
+    color: var(--primary-color);
+    line-height: 1;
+}
+
+#feature .fe-box:nth-child(2) h6{
+    background-color: #cdebbc;
+}
+
+#feature .fe-box:nth-child(3) h6{
+    background-color: #d1e8f2;
+}
+
+#feature .fe-box:nth-child(4) h6{
+    background-color: #f6bdf6;
+}
+
+#feature .fe-box:nth-child(5) h6{
+    background-color: #cdd4f8;
+}
+
+#feature .fe-box:nth-child(6) h6{
+    background-color: #fff2e5;
+}
