--- a/css/style.css
+++ b/css/style.css
@@ -326,3 +326,36 @@ button.white{
     bottom: 20px;
     right: 15px;
 }
+
+
+/*******---Banner Section Style---*******/
+
+#banner{
+    background: url(../img/banner/b2.jpg) center/cover;
+    height: 50vh;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#banner h4{
+    color: white;
+    font-size: 16px;
+}
+
+#banner h2{
+    color: white;
+    padding: 10px 0;
+}
+
+#banner h2 span{
+    color: #ef3636;
+}
+
+#banner button:hover{
+    background-color: var(--primary-color);
+    color: #fff;
+}
