--- a/css/style.css
+++ b/css/style.css
@@ -359,3 +359,52 @@ button.white{
     background-color: var(--primary-color);
     color: #fff;
 }
+
+
+/*******---Small Banner Section Style---*******/
+
+#sm-banner{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#sm-banner .banner-box{
+    background: url(../img/img1.jpg) center/cover;
+    height: 50vh;
+    min-width: 47%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
+}
+
+#sm-banner .banner-box h4{
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+#sm-banner .banner-box h2{
+    color: wheat;
+    font-size: 28px;
+    font-weight: 800;
+}
+
+#sm-banner .banner-box span{
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+
+#sm-banner .banner-box:hover button{
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+}
+
+#sm-banner .banner-box:nth-child(2){
+    background: url(../img/banner/b10.jpg) center/cover;
+}
+
