--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,43 @@ button.white{
     background: url(../img/banner/b10.jpg) center/cover;
 }
 
+/*******---Banner 3 Section Style---*******/
+
+#banner3{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0 80px;
+}
+
+#banner3 .banner-box{
+    background: url(../img/img4.jpg) center/cover;
+    height: 30vh;
+    min-width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#banner3 .banner-box h4{
+    color: white;
+    font-weight: 900;
+    font-size: 22px;
+}
+
+#banner3 .banner-box h3{
+    color: #ec544e;
+    font-weight: 800;
+    font-size: 15px;
+}
+
+#banner3 .banner-box:nth-child(2){
+    background: url(../img/img7.jpg) center/cover;
+}
+
+#banner3 .banner-box:nth-child(3){
+    background: url(../img/img3.jpg) center/cover;
+}
