--- a/css/style.css
+++ b/css/style.css
@@ -448,3 +448,61 @@ button.white{
 #banner3 .banner-box:nth-child(3){
     background: url(../img/img3.jpg) center/cover;
 }
+
+
+
+/*******---Newsletter Section Style---*******/
+
+#newsletter{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background: url(../img/banner/b1.jpg) center/cover;
+    padding: 40px 110px;
+    height: 30vh;
+    margin: 30px 0;
+}
+
+#newsletter h4{
+    color: white;
+    font-weight: 700;
+    font-size: 22px;
+}
+
+#newsletter p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #818ea0;
+}
+
+#newsletter p span{
+    color: #ffbd27;
+}
+
+#newsletter input{
+    height: 3.125rem;
+    padding: 0 1.25rem;
+    font-size: 14px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    outline: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+#newsletter button {
+    background-color: var(--primary-color);
+    color: white;
+    height: 3.125rem;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    white-space: nowrap;
+}
+
+#newsletter .form{
+    display: flex;
+    width: 40%;
+}
